@@ -1,9 +1,11 @@
 package uk.gov.hmcts.probate.service;
 
+import jakarta.annotation.Nullable;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
@@ -24,7 +26,6 @@ import uk.gov.hmcts.probate.security.SecurityUtils;
 import uk.gov.hmcts.probate.service.evidencemanagement.header.HttpHeadersFactory;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 
-import jakarta.annotation.Nullable;
 import java.net.URI;
 import java.util.List;
 import java.util.Locale;
@@ -60,6 +61,9 @@ public class CaveatQueryService {
     private final AuthTokenGenerator serviceAuthTokenGenerator;
     private final SecurityUtils securityUtils;
     private final BusinessValidationMessageRetriever businessValidationMessageRetriever;
+    @Value("${data-extract.pagination.size}")
+    protected int dataExtractPaginationSize;
+    private static final String SORT_COLUMN = "id";
 
     private static <T> T nonNull(@Nullable T result) {
         Assert.state(result != null, "Entity should be non null in CaveatQueryService");
@@ -74,8 +78,9 @@ public class CaveatQueryService {
 
         String jsonQuery = new SearchSourceBuilder().query(query).toString();
 
-        List<ReturnedCaveatDetails> foundCaveats = runQuery(caseType, jsonQuery);
-        if (foundCaveats.size() != 1) {
+        ReturnedCaveats foundCaveats = runQuery(caseType, jsonQuery);
+
+        if (foundCaveats.getCaveats().size() != 1) {
             String[] args = {caveatId};
             String userMessage = businessValidationMessageRetriever.getMessage(CAVEAT_NOT_FOUND_CODE, args, Locale.UK);
             String userMessageWelsh = businessValidationMessageRetriever.getMessage(CAVEAT_NOT_FOUND_CODE_WELSH, args,
@@ -83,21 +88,11 @@ public class CaveatQueryService {
             throw new BusinessValidationException(userMessage,
                 "Could not find any caveats for the entered caveat id: " + caveatId, userMessageWelsh);
         }
-        return foundCaveats.get(0).getData();
+        return foundCaveats.getCaveats().getFirst().getData();
     }
 
-    public List<ReturnedCaveatDetails> findCaveatDraftCases(String startDate,
-                                                                   String endDate, CaseType caseType) {
-        BoolQueryBuilder query = boolQuery();
 
-        query.must(matchQuery(STATE, PA_APP_CREATED));
-        query.filter(rangeQuery("last_modified").gte(startDate).lte(endDate));
-        String jsonQuery = new SearchSourceBuilder().query(query).toString();
-
-        return runQuery(caseType, jsonQuery);
-    }
-
-    private List<ReturnedCaveatDetails> runQuery(CaseType caseType, String jsonQuery) {
+    private ReturnedCaveats runQuery(CaseType caseType, String jsonQuery) {
         log.debug("CaveatQueryService runQuery: " + jsonQuery);
         URI uri = UriComponentsBuilder
             .fromHttpUrl(ccdDataStoreAPIConfiguration.getHost() + ccdDataStoreAPIConfiguration.getCaseMatchingPath())
@@ -127,8 +122,9 @@ public class CaveatQueryService {
             throw new ClientDataException(e.getMessage());
         }
 
-        return returnedCaveats.getCaveats();
+        return returnedCaveats;
     }
+
 
     public List<ReturnedCaveatDetails> findCaveatExpiredCases(String expiryDate) {
         BoolQueryBuilder query = boolQuery()
@@ -139,6 +135,6 @@ public class CaveatQueryService {
                 .should(matchQuery(STATE, AWAITING_WARNING_RESPONSE))
                 .minimumShouldMatch(1);
         String jsonQuery = new SearchSourceBuilder().query(query).toString();
-        return runQuery(CAVEAT, jsonQuery);
+        return runQuery(CAVEAT, jsonQuery).getCaveats();
     }
 }
